--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -21,12 +21,12 @@
               </a>
             </div>
             <div class="p-2">
-              <a class="nav-cat" href="https://www.nationalgeographic.com.es/animales/insectos">
+              <a class="nav-cat" href="insectos.html">
                 Insectos
               </a>
             </div>
             <div class="p-2">
-              <a class="nav-cat" href="https://zoobarcelona.cat/es/animales/reptiles">
+              <a class="nav-cat" href="reptiles.html">
                 Reptiles
               </a>
             </div>
